--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,10 +1,10 @@
 ---
 layout: archive
-title: "Teaching"
+title: "Technology"
 permalink: /teaching/
 author_profile: true
 ---
-
+Type something here
 {% include base_path %}
 
 {% for post in site.teaching reversed %}
