Update and rename mypublications.md to mypublications.html

--- a/_pages/mypublications.html
+++ b/_pages/mypublications.html
@@ -1,12 +1,13 @@
 ---
 layout: archive
-title: "Machine Learning"
-permalink: /mypublications/
+title: "MachineLearning"
+permalink: /mypublication/
 author_profile: true
 ---
 
 {% include base_path %}
 
-{% for post in site.mypublications reversed %}
+{% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
+
