--- a/_pages/mypublications.html
+++ b/_pages/mypublications.html
@@ -7,7 +7,7 @@ author_profile: true
 
 {% include base_path %}
 
-{% for post in site.teaching reversed %}
+{% for post in site.mypublication reversed %}
   {% include archive-single.html %}
 {% endfor %}
 
