--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Best Practices and Demonstrations"
+title: "solve technical problems, increase efficiency and productivity, and improve systems"
 permalink: /talks/
 author_profile: true
 ---
