--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "solve technical problems, increase efficiency and productivity, and improve systems"
+title: "<i> ... solve technical problems, increase efficiency and productivity, and improve systems <i> "
 permalink: /talks/
 author_profile: true
 ---
