--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Data architecture 101"
+title: "Hello Data. This is a 101 on everything data in my mind"
 permalink: /portfolio/
 author_profile: true
 ---
