Update and rename markdown.md to markdown.html

--- a/_pages/markdown.html
+++ b/_pages/markdown.html
@@ -6,6 +6,7 @@ author_profile: true
 ---
 
 Type something here
+Type something here
 {% include base_path %}
 
 {% for post in site.markdown reversed %}
