--- a/_pages/markdown.html
+++ b/_pages/markdown.html
@@ -1,14 +1,9 @@
 ---
 layout: archive
-title: "the art and science of building data products"
+title: "Out of office"
 permalink: /markdown/
 author_profile: true
 ---
 
 Type something here
 Type something here
-{% include base_path %}
-
-{% for post in site.markdown reversed %}
-  {% include archive-single.html %}
-{% endfor %}
