--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -4,7 +4,7 @@ title: "Hello Data. This is a 101 on everything data in my mind"
 permalink: /portfolio/
 author_profile: true
 ---
-
+I believe that the simpler I can explain things, the more intimate I am with the topic. The better I explain a topic to someone unfamiliar with it, the better I understand it myself. Simple explanations ensure the message is clear and easily understood by a wider audience. Ideas need acceptance from large audiences within the organization to become reality. By simplifying explanations, we make ideas accessible to people with varying expertise, encouraging engagement. This avoids confusion, saves time, and promotes quicker comprehension and decision-making. Simple explanations also help uncover flaws, improve concepts, and aid retention, fostering innovation. This foundation allows for deeper concepts to be built upon.
 {% include base_path %}
 
 
