--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -4,10 +4,7 @@ title: "<i> Solve technical problems, increase efficiency and productivity, and 
 permalink: /talks/
 author_profile: true
 ---
-We need a repeatable processes and patterns for designing, building, and maintaining systems that enable the architecture to collect, store, and process large volumes of data. 
-The data pipelines to deliver these processes need to ensure that data is accessible, reliable, and efficiently available for analysis and decision-making. 
-I set out to demonstrate how tools and technologies can realize these processes and patterns through the lifecyle of data from source to destination while maintaining quality, scalability, and security.
-
+We need repeatable processes and patterns for designing, building, and maintaining systems that enable the architecture to collect, store, and process large volumes of data. These data pipelines must ensure that data is accessible, reliable, and efficiently available for analysis and decision-making. My goal is to demonstrate how tools and technologies can implement these processes and patterns throughout the data lifecycle, from source to destination, while maintaining quality, scalability, and security.
   {% if site.talkmap_link == true %}
 
 <p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
